Revision history for Module::Build::Tiny

{{$NEXT}}

0.039     2014-10-12 10:38:39+02:00 Europe/Amsterdam
          Supply basename to *.PL files as its args

0.038     2014-09-06 11:28:23+02:00 Europe/Amsterdam
          Scrub PERL_MB_OPT in tests too

0.037     2014-07-27 16:14:54+02:00 Europe/Amsterdam
          Scrub environment variable in tests

0.036     2014-05-02 14:51:02CEST+0200 Europe/Amsterdam
          Add --jobs argument to MBT
          Add xs directory to include list

0.035     2014-02-17 23:18:54CET+0100 Europe/Amsterdam
          Fix install test in absence of a compiler

0.034     2014-01-22 03:40:21CET+0100 Europe/Amsterdam
          Make install tests more platform independent

0.033     2014-01-21 03:27:32CET+0100 Europe/Amsterdam
          Require Getopt::Long 2.36
          Add install tests

0.032     2014-01-20 20:07:13CET+0100 Europe/Amsterdam
          Fix env options and Build.PL options being ignored (regression in 0.031)

0.031     2014-01-20 16:24:58CET+0100 Europe/Amsterdam
          Process argument sources separately
          Use mod2fname appropriately

0.030     2013-10-11 12:01:24 Europe/Amsterdam
          Added workaround for #54606 

0.029     2013-10-11 00:39:20 Europe/Amsterdam
          Respect harness environmental variables
          Add main dir to include path

0.028     2013-09-29 19:58:39 Europe/Amsterdam
          Revert "Removed clean and realclean actions"
          Build .c and .o in temp/ instead of lib
          Got rid of IO layers
          Separate libdoc and bindoc checks

0.027     2013-09-09 11:43:12 Europe/Amsterdam
          Various documentation updates

0.026     2013-08-19 22:09:00 Europe/Amsterdam
          Safe PERL_MB_OPT during configuration stage

0.025     2013-07-12 16:09:45 Europe/Amsterdam
          Use local tempdir

0.024     2013-06-29 21:57:13 Europe/Amsterdam
          Generate man pages in the correct section

0.023     2013-06-03 01:13:05 Europe/Amsterdam