@@ -1,6 +1,7 @@
 Revision history for Module::Build::Tiny
 
 {{$NEXT}}
+          Allow scripts to be in bin/
 
 0.039     2014-10-12 10:38:39+02:00 Europe/Amsterdam
           Supply basename to *.PL files as its args
